--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -80,4 +80,6 @@
   <footer>  
   </footer>
 </body>
+<script src="Scripts/axios.min.js"></script>
+<script src="Scripts/main.js"></script>
 </html>
