--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login page</title>
+  <title>Sign Up – HabiTrack</title>
   <link rel="stylesheet" href="./Styles/styles.css">
 </head>
 <body>
@@ -19,8 +19,11 @@
 
   <section class="login-section">
     <div class="login-container">
-      <h2>Welcome Back</h2>
-      <p id="login-message" class="login-message"></p>
+      <h2>Create Account</h2>
+      <p id="signup-message" class="login-message"></p>
+
+      <label for="name">Name</label>
+      <input type="text" id="name" placeholder="Enter your name" required>
 
       <label for="email">Email</label>
       <input type="email" id="email" placeholder="Enter your email" required>
@@ -28,9 +31,9 @@
       <label for="password">Password</label>
       <input type="password" id="password" placeholder="Enter your password" required>
 
-      <button id="login-btn" class="btn-primary">Login</button>
+      <button id="signup-btn" class="btn-primary">Sign Up</button>
 
-      <p class="signup-text">Don't have an account? <a href="signup.html">Sign Up</a></p>
+      <p class="signup-text">Already have an account? <a href="login.html">Login</a></p>
     </div>
   </section>
 
@@ -38,6 +41,5 @@
   </footer>
 </body>
 <script src="Scripts/axios.min.js"></script>
-<script src="Scripts/login.js"></script>
-
+<script src="Scripts/signup.js"></script>
 </html>
