Added section for entries and quick log

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -55,7 +55,7 @@
   <div class="feature-cards">
     <div class="card">
       <h3>Effortless Logging</h3>
-      <p>Simply type what you did today — no complicated forms or fields.</p>
+      <p>Simply type what you did today ,no complicated forms or fields.</p>
     </div>
     <div class="card">
       <h3>Automatic Tracking</h3>
@@ -80,6 +80,5 @@
   <footer>  
   </footer>
 </body>
-<script src="Scripts/axios.min.js"></script>
-<script src="Scripts/main.js"></script>
+
 </html>
