--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -37,6 +37,7 @@
   <footer>
   </footer>
 </body>
+<script src="Scripts/config.js"></script>
 <script src="Scripts/axios.min.js"></script>
 <script src="Scripts/login.js"></script>
 
