--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -40,6 +40,8 @@
   <footer>
   </footer>
 </body>
+
+<script src="Scripts/config.js"></script>
 <script src="Scripts/axios.min.js"></script>
 <script src="Scripts/signup.js"></script>
 </html>
