--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -17,66 +17,15 @@
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   </nav>
 
-  <section id="habits-section" class="dashboard-section">
-    <h2>Your Habits</h2>
+  <div class="dashboard-sections-container">
+    <section id="habits-section" class="dashboard-section">
+      <h2>Your Habits</h2>
+      <button id="addHabitBtn" class="btn-primary">+ Add Habit</button>
+      <div id="habitsList" class="habits-container"></div>
+    </section>
 
-   
-    <button id="addHabitBtn" class="btn-primary">+ Add Habit</button>
-
-    <div id="habitsList" class="habits-container"></div>
-  </section>
- 
- 
-  <div id="habitPopup" class="popup hidden">
-  <div class="popup-content">
-    <h3 id="habitPopupTitle">Add Habits</h3>
-
-    <h4>Select Predefined Habits</h4>
-    <div id="predefinedHabits">
-      <label><input type="checkbox" value="Sleep"> Sleep</label>
-      <label><input type="checkbox" value="Exercise"> Exercise</label>
-      <label><input type="checkbox" value="Water"> Water</label>
-      <label><input type="checkbox" value="Mood"> Mood</label>
-      <label><input type="checkbox" value="Steps"> Steps</label>
-    </div>
-
-    <h4>Or add a custom habit</h4>
-    <input type="text" id="habitName" placeholder="Enter habit name">
-
-    <label>Target (optional)</label>
-    <input type="text" id="habitTarget" placeholder="e.g., 8 hours, 10,000 steps">
-
-    <button id="saveHabitBtn" class="btn-primary">Save</button>
-    <button id="closeHabitPopup" class="btn-secondary">Cancel</button>
-  </div>
-</div>
-
-<section id="entries-section" class="dashboard-section">
-  <h2>Daily Logs</h2>
-
-  <button id="addEntryBtn" class="btn-primary">+ Log Entry</button>
-
-  <div id="entriesList" class="entries-container">
-
-  </div>
-</section>
-
-
-<div id="entryPopup" class="popup hidden">
-  <div class="popup-content">
-    <h3 id="entryPopupTitle">Log Daily Entry</h3>
-
-    <label>Free-text log</label>
-    <textarea id="entryText" placeholder="e.g., Slept 7 hours, walked 8000 steps, drank 2 cups of coffee"></textarea>
-
-    <button id="saveEntryBtn" class="btn-primary">Save</button>
-    <button id="closeEntryPopup" class="btn-secondary">Cancel</button>
-  </div>
-</div>
-
-<section id="quick-log-section" class="dashboard-section">
+    <section id="quick-log-section" class="dashboard-section">
   <h2>Quick Log</h2>
-
   <div class="quick-log-fields">
     <label>Steps</label>
     <input type="number" id="quickSteps" placeholder="e.g., 8000">
@@ -84,12 +33,51 @@
     <label>Caffeine (cups)</label>
     <input type="number" id="quickCaffeine" placeholder="e.g., 2">
 
-    <label>Sleep Hours</label>
-    <input type="number" step="0.1" id="quickSleepHours" placeholder="e.g., 7.5">
-  </div>
+    <label>Slept at</label>
+    <input type="time" id="quickSleepStart">
 
+    <label>Woke up at</label>
+    <input type="time" id="quickSleepEnd">
+  </div>
   <button id="quickSaveBtn" class="btn-primary">Save Quick Log</button>
 </section>
+
+<section id="entries-section" class="dashboard-section">
+    <h2>Daily Logs</h2>
+    <button id="addEntryBtn" class="btn-primary">+ Log Entry</button>
+    <div id="entriesList" class="entries-container"></div>
+</section>
+
+
+  <div id="habitPopup" class="popup hidden">
+    <div class="popup-content">
+      <h3 id="habitPopupTitle">Add Habits</h3>
+      <h4>Select Predefined Habits</h4>
+      <div id="predefinedHabits">
+        <label><input type="checkbox" value="Sleep"> Sleep</label>
+        <label><input type="checkbox" value="Exercise"> Exercise</label>
+        <label><input type="checkbox" value="Water"> Water</label>
+        <label><input type="checkbox" value="Mood"> Mood</label>
+        <label><input type="checkbox" value="Steps"> Steps</label>
+      </div>
+      <h4>Or add a custom habit</h4>
+      <input type="text" id="habitName" placeholder="Enter habit name">
+      <label>Target (optional)</label>
+      <input type="text" id="habitTarget" placeholder="e.g., 8 hours, 10,000 steps">
+      <button id="saveHabitBtn" class="btn-primary">Save</button>
+      <button id="closeHabitPopup" class="btn-secondary">Cancel</button>
+    </div>
+  </div>
+
+  <div id="entryPopup" class="popup hidden">
+    <div class="popup-content">
+      <h3 id="entryPopupTitle">Log Daily Entry</h3>
+      <label>Free-text log</label>
+      <textarea id="entryText" placeholder="e.g., Slept 7 hours, walked 8000 steps, drank 2 cups of coffee"></textarea>
+      <button id="saveEntryBtn" class="btn-primary">Save</button>
+      <button id="closeEntryPopup" class="btn-secondary">Cancel</button>
+    </div>
+  </div>
 
  <script src="Scripts/config.js"></script>
   <script src="Scripts/axios.min.js"></script>
