Added some images for the landing page

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -119,8 +119,7 @@
 
   <div id="entryPopup" class="popup hidden">
     <div class="popup-content">
-      <h3 id="entryPopupTitle">Log Daily Entry</h3>
-      <label>Free-text log</label>
+      <h3 id="entryPopupTitle">Log your day</h3>
       <textarea id="entryText" placeholder="e.g., Slept 7 hours, walked 8000 steps, drank 2 cups of coffee"></textarea>
       <button id="saveEntryBtn" class="btn-primary">Save</button>
       <button id="closeEntryPopup" class="btn-secondary">Cancel</button>
