--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -33,19 +33,20 @@
   <h2>How It Works</h2>
   <div class="steps">
     <div class="step">
-      <img src="img/step1.png" alt="Step 1">
+      <img src="./assets/step1.PNG" alt="Step 1">
       <h3>1. Log Your Day</h3>
       <p>Simply enter your daily activities, meals, and sleep in plain language.</p>
     </div>
     <div class="step">
-      <img src="img/step2.png" alt="Step 2">
+      <img src="./assets/step2.PNG" alt="Step 2">
       <h3>2. See Your Stats</h3>
-      <p>Your entries are automatically organized into key health metrics like steps, caffeine, and sleep patterns.</p>
+    <p>Monitor your daily steps, caffeine intake, and sleep patterns, and track your progress over the week with clear and concise visualizations.</p>
     </div>
     <div class="step">
-      <img src="img/step3.png" alt="Step 3">
-      <h3>3. Track Progress</h3>
-      <p>Monitor trends over time with charts, get weekly summaries, and discover actionable insights to improve your habits.</p>
+      <img src="./assets/step3.PNG" alt="Step 3">
+    <h3>3. Track Your Habits</h3>
+    <p>Keep track of your habits, set targets, activate or deactivate them, and monitor your weekly progress to stay on top of your health goals.</p>
+
     </div>
   </div>
 </section>
