--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -78,8 +78,21 @@
 <a href="login.html" class="btn-primary">Get Started</a>
 </section>
 
-  <footer>  
-  </footer>
+<footer class="footer">
+  <div class="footer-content">
+    <h3>About Us</h3>
+    <p>
+      HabiTrack is a simple and intuitive platform designed to help you build better habits,
+      understand your daily patterns, and improve your well-being.  
+      Log your day, track your progress, and stay motivated all in one place.
+    </p>
+
+    <div class="footer-info">
+      <p><strong>Contact:</strong> support@habittrack.com</p>
+    </div>
+  </div>
+</footer>
+
 </body>
 
 </html>
