--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -126,7 +126,20 @@
     </div>
   </div>
 
+<footer class="footer">
+  <div class="footer-content">
+    <h3>About Us</h3>
+    <p>
+      HabiTrack is a simple and intuitive platform designed to help you build better habits,
+      understand your daily patterns, and improve your well-being.  
+      Log your day, track your progress, and stay motivated all in one place.
+    </p>
 
+    <div class="footer-info">
+      <p><strong>Contact:</strong> support@habittrack.com</p>
+    </div>
+  </div>
+</footer>
 
 
   <script src="Scripts/config.js"></script>
