Added id and created at collums , and started table habits management

--- a/Frontend/admin.html
+++ b/Frontend/admin.html
@@ -21,8 +21,10 @@
       <table id="usersTable">
         <thead>
           <tr>
+            <th>Id</th>
             <th>Name</th>
             <th>Email</th>
+            <th>created at</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -31,7 +33,29 @@
         </tbody>
       </table>
     </section>
-  </main>
+    
+    <section class="users-section">
+      <h2>User Management</h2>
+      <input type="text" id="searchUser" placeholder="Search users..." />
+      <table id="usersTable">
+        <thead>
+          <tr>
+            <th>id</th>
+            <th>Name</th>
+            <th>category</th>
+            <th>target</th>
+            <th>status</th>
+            <th>created at</th>
+            <th>Actions</th>
+
+          </tr>
+        </thead>
+        <tbody>
+   
+        </tbody>
+      </table>
+    </section>
+  
 
   <script src="Scripts/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
