Fetched habits data and fixed delete button

--- a/Frontend/admin.html
+++ b/Frontend/admin.html
@@ -24,7 +24,7 @@
             <th>Id</th>
             <th>Name</th>
             <th>Email</th>
-            <th>created at</th>
+            <th>Created at</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -35,17 +35,17 @@
     </section>
     
     <section class="users-section">
-      <h2>User Management</h2>
-      <input type="text" id="searchUser" placeholder="Search users..." />
-      <table id="usersTable">
+      <h2>Habits Management</h2>
+      <table id="habitsTable">
         <thead>
           <tr>
             <th>id</th>
+            <th>User id</th>
             <th>Name</th>
-            <th>category</th>
-            <th>target</th>
-            <th>status</th>
-            <th>created at</th>
+            <th>Category</th>
+            <th>Target</th>
+            <th>Status</th>
+            <th>Created at</th>
             <th>Actions</th>
 
           </tr>
