--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,10 +14,11 @@
     <ul class="nav-links">
       <li><a href="#how-it-works">How It Works</a></li>
       <li><a href="#features">Features</a></li>
+      <li><a href="Dashboard.html">Dashboard</a></li>
       <li><a href="login.html">Login</a></li>
       <li><a href="login.html">Sign Up</a></li>
+      <li><a href="login.html" id="logout">Log out</a></li>
     </ul>
-    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   </nav>
 
   <section class="hero">
@@ -92,7 +93,6 @@
     </div>
   </div>
 </footer>
-
+ <script src="Scripts/logout.js"></script>
 </body>
-
 </html>
