--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -11,8 +11,8 @@
   <nav class="navbar">
     <div class="logo">HabiTrack</div>
     <ul class="nav-links">
-      <li><a href="dashboard.html">Dashboard</a></li>
-      <li><a href="login.html">Logout</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="login.html" id="logout">Logout</a></li>
     </ul>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   </nav>
@@ -141,7 +141,6 @@
   </div>
 </footer>
 
-
   <script src="Scripts/config.js"></script>
   <script src="Scripts/axios.min.js"></script>
   <script src="Scripts/habits.js"></script>
@@ -153,6 +152,7 @@
   <script src="Scripts/caffeineCharts.js"></script>
   <script src="Scripts/sleepCharts.js"></script>
   <script src="Scripts/nutrition.js"></script>
+ <script src="Scripts/dashboard.js"></script>
 
 </body>
 </html>
