Fixed activate/disactivate button

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -101,11 +101,11 @@
       <h3 id="habitPopupTitle">Add Habits</h3>
       <h4>Select Predefined Habits</h4>
       <div id="predefinedHabits">
-        <label><input type="checkbox" value="Sleep"> Sleep</label>
-        <label><input type="checkbox" value="Exercise"> Exercise</label>
+        <label><input type="checkbox" value="Practice instrument"> Practice instrument</label>
+        <label><input type="checkbox" value=" Sleep"> Sleep</label>
         <label><input type="checkbox" value="Water"> Water</label>
-        <label><input type="checkbox" value="Mood"> Mood</label>
-        <label><input type="checkbox" value="Steps"> Steps</label>
+        <label><input type="checkbox" value="Exercice"> Exercice</label>
+        <label><input type="checkbox" value="Jogging"> Jogging</label>
       </div>
       <h4>Or add a custom habit</h4>
       <input type="text" id="habitName" placeholder="Enter habit name">
@@ -139,19 +139,23 @@
     </div>
   </div>
 </footer>
+<script src="Scripts/axios.min.js"></script>
+<script src="Scripts/config.js"></script>
 
-  <script src="Scripts/config.js"></script>
-  <script src="Scripts/axios.min.js"></script>
-  <script src="Scripts/habits.js"></script>
-  <script src="Scripts/entries.js"></script>
-  <script src="Scripts/quickLog.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="Scripts/charts.js"></script>
-  <script src="Scripts/weeklySummary.js"></script>
-  <script src="Scripts/caffeineCharts.js"></script>
-  <script src="Scripts/sleepCharts.js"></script>
-  <script src="Scripts/nutrition.js"></script>
- <script src="Scripts/dashboard.js"></script>
+<script src="Scripts/dashboard.js"></script>
+<script src="Scripts/habits.js"></script>
+<script src="Scripts/entries.js"></script>
+<script src="Scripts/quickLog.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script src="Scripts/charts.js"></script>
+<script src="Scripts/caffeineCharts.js"></script>
+<script src="Scripts/sleepCharts.js"></script>
+<script src="Scripts/weeklySummary.js"></script>
+
+<script src="Scripts/nutrition.js"></script>
+
 
 </body>
 </html>
