--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -26,7 +26,7 @@
       <label for="email">Email</label>
       <input type="email" id="email" placeholder="Enter your email" required>
 
-      <label for="password">Password</label>
+      <label class="l1" for="password">  Password</label>
       <input type="password" id="password" placeholder="Enter your password" required>
 
       <button id="login-btn" class="btn-primary">Login</button>
